frame/support/test/tests/construct_runtime_ui/missing_where_block.stderr
error: expected `where`
 --> tests/construct_runtime_ui/missing_where_block.rs:4:21
  |
4 |     pub struct Runtime {}
  |                        ^
